# AUTO_EDA

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  mcp.json.example  pyproject.toml
.claude/: index.json
.github/workflows/: ci.yml
analysis/: A1_technical_feasibility.md  A2_market_positioning.md  A4_risk_assessment.md  A5_differentiation_strategy.md  A7_tech_stack_decision.md  A8_integration_roadmap.md  A9_workflow_engine_design.md  AUDIT1_consistency.md  AUDIT2_research_strategy.md  AUDIT3_master_report.md  AUDIT4_ai_integration.md  AUDIT5_code_quality.md  CLAUDE.md  DA1_architecture_deep_design.md  DA2_visual_feedback_technical.md  DA3_phase0_implementation_spec.md  DA4_risk_mitigation_deep.md  DA5_claude_mcp_integration.md  DA6_competitive_deep_analysis.md  DA7_eda_knowledge_system.md  INDEX.md  P1_phase_roadmap_detailed.md  PLAN1_phase0_development.md  PLAN2_architecture_spec.md  PLAN3_testing_strategy.md  PLAN4_community_ops.md  PLAN6_kickoff_guide.md
research/: CLAUDE.md  NEW_R1_commercial_eda_mcp_status.md  NEW_R2_opensource_eda_mcp_status.md  NEW_R3_mcp_quality_guide.md  NEW_R5_ai_eda_trends_2025.md  NEW_R6_eda_python_apis.md  NEW_R7_mcp_protocol_2025.md  NEW_R8_eda_community.md  NEW_R9_eda_deployment.md  R10_eda_llm_competitors.md  R1_commercial_eda_vendors.md  R2_opensource_eda_tools.md  R3_eda_automation_apis.md  R4_existing_mcp_servers.md  R5_mcp_architecture.md  R6_ai_eda_trends.md  R7_eda_file_formats.md  R8_claude_mcp_patterns.md  R9_eda_workflow_automation.md  kicad_mcp_integration_research.md
src/auto_eda/: __init__.py  __main__.py
src/auto_eda/core/: CLAUDE.md  __init__.py  base_server.py  errors.py  process.py  result.py
src/auto_eda/models/: CLAUDE.md  verilog.py
src/auto_eda/servers/easyeda/: CLAUDE.md  __init__.py  bridge.py  components.py  models.py  server.py  stm32_flow.py
src/auto_eda/servers/kicad/: cli.py  models.py  server.py  version.py
src/auto_eda/servers/verilog_utils/: parser.py  server.py
src/auto_eda/servers/yosys/: models.py  runner.py  server.py
tests/: CLAUDE.md  conftest.py
tests/test_core/: test_errors.py
tests/test_servers/: test_kicad.py  test_yosys.py
tests/test_servers/test_easyeda/: test_bridge.py  test_stm32_flow.py
