[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-eda"
version = "0.1.0"
description = "AI-driven EDA automation platform via MCP"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{name = "AUTO_EDA Contributors"}]
keywords = ["eda", "mcp", "kicad", "yosys", "openroad", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.3.0",
    "pydantic>=2.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
pcb = [
    "kicad-python>=0.5.0",
]
ic = [
    "pyverilog>=1.3.0",
    "gdstk>=0.9.0",
]
sim = [
    "PySpice>=1.5",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.3",
    "pre-commit>=3.0",
]
full = [
    "auto-eda[pcb]",
    "auto-eda[ic]",
    "auto-eda[sim]",
]

[project.scripts]
auto-eda = "auto_eda.__main__:main"

[project.urls]
Homepage = "https://github.com/auto-eda/auto-eda"
Repository = "https://github.com/auto-eda/auto-eda"
Issues = "https://github.com/auto-eda/auto-eda/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_eda"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["pyosys.*", "pyverilog.*", "gdstk.*", "PySpice.*", "kipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests requiring real EDA tools (deselect with -m 'not integration')",
    "slow: marks slow tests",
]

[tool.coverage.run]
source = ["src/auto_eda"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
